# simple-shell

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  main.cpp
